@@ -1,4 +1,4 @@
-.TH vifm 1 "November 20, 2014" "" "Vifm"
+.TH vifm 1 "November 28, 2014" "" "Vifm"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -4036,7 +4036,7 @@ all files of a particular type is the same.  E.g. mounting of tar files \
 don't require any file specific options.
 
 Format line:
-  FUSE_MOUNT|mounter %SOURCE_FILE %DESTINATION_DIR [%CLEAR]
+  FUSE_MOUNT|mounter %SOURCE_FILE %DESTINATION_DIR [%FOREGROUND]
 
 Example filetype command:
 .EX
@@ -4049,7 +4049,7 @@ and is useful for mounting remotes, for example remote file systems over ftp \
 or ssh.
 
 Format line:
-  FUSE_MOUNT2|mounter %PARAM %DESTINATION_DIR [%CLEAR]
+  FUSE_MOUNT2|mounter %PARAM %DESTINATION_DIR [%FOREGROUND]
 
 Example filetype command:
 .EX
@@ -4062,15 +4062,20 @@ Example file content:
 .EE
 
 All % macros are expanded by vifm at runtime and have the following meaning:
-  \- %SOURCE_FILE is replaced by full path to selected file
+  \- %SOURCE_FILE is replaced by full path to selected file;
   \- %DESTINATION_DIR is replaced by full path to mount directory, which is \
-created by vifm basing on the value of 'fusehome' option.
+created by vifm basing on the value of 'fusehome' option;
   \- %PARAM value is filled from the first line of file (whole line), though \
-in the future it can be changed to whole file content
-  \- %CLEAR means that you want to clear screen before running mount command.
+in the future it can be changed to whole file content;
+  \- %FOREGROUND means that you want to run mount command as a regular \
+command (required to be able to provide input for communication with mounter \
+in interactive way).
 
-%CLEAR is an optional macro.  Other macros are not mandatory, but mount \
+%FOREGROUND is an optional macro.  Other macros are not mandatory, but mount \
 commands likely won't work without them.
+
+%CLEAR is obsolete name of %FOREGROUND, which is still supported, but might be \
+removed in future.  Its use is discouraged.
 
 The mounted FUSE file systems will be automatically unmounted in two cases:
 .IP \- 2
